<resources>
    <string name="app_name">MyApplication</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login">login</string>
    <string name="username">Username:</string>
    <string name="please_enter_username">please enter Username</string>
    <string name="password_here">password here</string>
    <string name="cancel">Cancel</string>
    <string name="signup">signup</string>
    <string name="login_form">Login Form</string>
    <string name="Login2">Login</string>
</resources>