<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
   >

    <Button
        android:id="@+id/cancel"
        android:layout_width="171dp"
        android:layout_height="83dp"
        android:text="@string/cancel"
        android:textColor="#EA80FC"
        android:textSize="30sp"
        tools:ignore="MissingConstraints,TextSizeCheck,VisualLintBounds"
        tools:layout_editor_absoluteX="224dp"
        tools:layout_editor_absoluteY="507dp" />

    <Button
        android:id="@+id/login"
        android:layout_width="171dp"
        android:layout_height="83dp"
        android:text="@string/login"
        android:textColor="#EA80FC"
        android:textSize="30sp"
        tools:ignore="MissingConstraints,VisualLintBounds"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="507dp" />

    <Button
        android:id="@+id/signup"
        android:layout_width="171dp"
        android:layout_height="83dp"
        android:text="@string/signup"
        android:textColor="#EA80FC"
        android:textSize="30sp"
        tools:ignore="MissingConstraints,TextSizeCheck,VisualLintBounds"
        tools:layout_editor_absoluteX="137dp"
        tools:layout_editor_absoluteY="609dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        tools:layout_editor_absoluteY="243dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="34dp" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="326dp"
        android:layout_height="103dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/please_enter_username"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="177dp"
        tools:textSize="31sp" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="326dp"
        android:layout_height="103dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password_here"
        android:inputType="textVisiblePassword"
        android:textSize="34sp"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="318dp"
         />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="346dp"
        android:layout_height="91dp"
        android:text="@string/Login2"
        android:textSize="70sp"
        android:textAlignment="center"
        tools:ignore="TextSizeCheck"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="42dp" />

</androidx.constraintlayout.widget.ConstraintLayout>